--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -4,7 +4,7 @@
 
 /*EDIT THIS TO CHANGE THE BACKGROUND, I RECOMMEND USING IMGUR TO HOST YOUR IMAGE*/
 [class~=app] {
-    background: url(https://raw.githubusercontent.com/WhatDaPuck/NotAnotherAnimeTheme/master/image/PTT4OKi.jpg) !important;
+    background: url(https://i.imgur.com/4y61vvU.jpg) !important;
     background-size: cover !important;
 }
 
